# synapse-ai

./: .env.docker  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  setup.ps1  setup.py  setup.sh
.github/: FUNDING.yml
.github/workflows/: publish.yml
backend/: requirements-coding.txt
backend/core/: agent_logger.py  api_key_middleware.py  api_keys.py  builder_tools.py  config.py  internal_auth.py  llm_providers.py  mcp_client.py  models.py  models_orchestration.py  react_engine.py  server.py  spawn_subtask.py  usage_tracker.py  user_auth.py
backend/core/cache/: __init__.py  prompt_cache.py  response_cache.py  store.py  tool_cache.py
backend/core/native_builder/: __init__.py
backend/core/orchestration/: context.py  engine.py  steps.py
backend/core/routes/: api_keys.py  api_v1.py  auth.py  orchestrations.py  settings.py  tools.py  usage.py
backend/services/: code_indexer.py  google.py
backend/tests/: test_cache.py
backend/tools/: code_search.py
docker/: supervisord.conf
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: page.tsx
frontend/src/app/api/agent-types/: route.ts
frontend/src/app/api/agents/generate-prompt/: route.ts
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/logout/: route.ts
frontend/src/app/api/auth/status/: route.ts
frontend/src/app/api/builder/chat/: route.ts
frontend/src/app/api/builder/resume/: route.ts
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/chat/stream/: route.ts
frontend/src/app/api/logs/[type]/: route.ts
frontend/src/app/api/models/: route.ts
frontend/src/app/api/schedules/: route.ts
frontend/src/app/api/schedules/[schedule_id]/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/app/settings/: layout.tsx
frontend/src/components/: SettingsView.tsx
frontend/src/components/orchestration/: BuilderPanel.tsx  StepConfigPanel.tsx  StepNode.tsx
frontend/src/components/settings/: APIKeysTab.tsx  AgentsTab.tsx  CustomToolsTab.tsx  GeneralTab.tsx  IntegrationsTab.tsx  OrchestrationTab.tsx  SupportTab.tsx  UsageTab.tsx  types.ts
frontend/src/lib/: backend.ts
frontend/src/types/: orchestration.ts
synapse/: cli.py  setup_wizard.py
(+5 files in other folders)
