[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-orch-ai"
version = "1.5.4"
description = "Synapse - A Multi Agent Orchestrator"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
keywords = ["ai", "agent", "mcp", "llm", "orchestrator", "local", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cffi>=2.0.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "mcp>=1.0",
    "chromadb>=0.5",
    "ollama>=0.2",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "duckduckgo-search>=6.0",
    "boto3>=1.34",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
    "pypdf>=4.0",
    "pdfplumber>=0.10",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "requests>=2.31",
    "anthropic>=0.28",
    "crawl4ai>=0.4",
    "psycopg[binary]>=3.0",
    "psycopg-pool>=3.0",
    "cocoindex>=0.3.30,<1.0",
    "python-telegram-bot>=20.0",
    "discord.py>=2.3",
    "slack-bolt>=1.18",
]

[project.scripts]
synapse = "synapse.cli:main"
"synapse-ai" = "synapse.cli:main"

[project.urls]
Homepage = "https://github.com/synapseorch-ai/synapse-ai"
Repository = "https://github.com/synapseorch-ai/synapse-ai"
Issues = "https://github.com/synapseorch-ai/synapse-ai/issues"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
artifacts = [
    "synapse/_frontend/**",
]
include = [
    "synapse/",
    "backend/core/",
    "backend/services/",
    "backend/tools/",
    "backend/main.py",
    "backend/requirements.txt",
    "backend/requirements-coding.txt",
    "backend/requirements-messaging.txt",
]

[tool.bandit]
targets = ["backend", "synapse"]
exclude_dirs = [
    "backend/venv",
    "backend/.venv",
    "backend/data",
    "backend/logs",
    "backend/chroma_db",
]
skips = []
